# stm-yaha

./: CMakeLists.txt  README.md  stm32f767zitx_FLASH.ld
backup/: ethernetif.h  lwip.h
inc/: leds.h  main.h  stm32f7xx_hal_conf.h
m4/: CMakeLists.txt
m4/cmake/: vscode_generated.cmake
m4/inc/: hal.h  hts221.h  lps22hb.h
m4/src/: hal.c  hts221.c  lps22hb.c  task_main.c
m7/: stm32f767zitx_FLASH.ld
m7/backup/: lwipopts.h
m7/cmake/: vscode_generated.cmake
m7/inc/: main.h  terminal.h
m7/src/: interrupts.c  syscall.c  terminal.c
m7/startup/: startup_stm32f767zitx.s
src/: interrupts.c  leds.c  lwip.c  main.c  sysmem.c  terminal.c
startup/: startup_stm32f767zitx.s
